--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,8 +7,9 @@
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.vscode": "1.1.4",
     "com.unity.inputsystem": "1.0.0-preview.6",
-    "com.unity.postprocessing": "2.2.2",
-    "com.unity.probuilder": "4.1.2",
+    "com.unity.postprocessing": "2.3.0",
+    "com.unity.probuilder": "4.2.3",
+    "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.terrain-tools": "3.0.1-preview",
     "com.unity.test-framework": "1.1.11",
     "com.unity.ugui": "1.0.0",
